--- a/templates/fragments/entete_public.html.twig
+++ b/templates/fragments/entete_public.html.twig
@@ -8,8 +8,7 @@
       class="bouton_menu"
       type="button"
       aria-controls="navigation_principale"
-      aria-expanded="false"
-    >
+      aria-expanded="false">
       <span class="bouton_menu_icone" aria-hidden="true"></span>
       <span class="bouton_menu_texte">Menu</span>
     </button>
@@ -18,33 +17,53 @@
       id="navigation_principale"
       class="navigation"
       aria-label="Navigation principale"
-      data-ouvert="false"
-    >
-      <a class="nav_lien {% if app.request.attributes.get('_route') == 'accueil' %}actif{% endif %}"
-         {% if app.request.attributes.get('_route') == 'accueil' %}aria-current="page"{% endif %}
-         href="{{ path('accueil') }}">Accueil</a>
+      data-ouvert="false">
 
-      <a class="nav_lien
-          {% if app.request.attributes.get('_route') in ['recherche', 'resultats'] %}
-            actif
-          {% endif %}"
-   {% if app.request.attributes.get('_route') in ['recherche', 'resultats'] %}
-     aria-current="page"
-   {% endif %}
+<!--ACCUEIL-->
+
+  <a class="nav_lien {% if app.request.attributes.get('_route') == 'accueil' %}actif{%endif %}"
+    {% if app.request.attributes.get('_route') == 'accueil' %}aria-current="page"{% endif %}
+    href="{{ path('accueil') }}">
+    Accueil
+    </a>
+
+<!--RECHERCHE-->
+
+  <a class="nav_lien {% if app.request.attributes.get('_route') in ['recherche', 'resultats'] %}actif
+  {% endif %}"
+   {% if app.request.attributes.get('_route') in ['recherche', 'resultats'] %}aria-current="page"{% endif %}
    href="{{ path('recherche') }}">
-  Accès aux covoiturages
-</a>
+   Accès aux covoiturages
+   </a>
 
-<a class="nav_lien {% if app.request.attributes.get('_route') == 'contact' %}actif{% endif %}"
+<!--CONTACT-->
+
+  <a class="nav_lien {% if app.request.attributes.get('_route') == 'contact' %}actif
+  {% endif %}"
    {% if app.request.attributes.get('_route') == 'contact' %}aria-current="page"{% endif %}
-   href="{{ path('contact') }}">Contact</a>
+   href="{{ path('contact') }}">
+   Contact
+   </a>
+
+<!--CONNEXION-->
+
+  <a class="nav_lien {% if app.request.attributes.get('_route') == 'connexion' %}actif
+  {% endif %}"
+   {% if app.request.attributes.get('_route') == 'connexion' %}aria-current="page"{% endif %}
+   href="{{ path('connexion') }}">
+   Connexion
+   </a>
+
+<!--INSCRIPTION-->
+
+  <a class="nav_lien {% if app.request.attributes.get('_route') == 'inscription' %}actif{% endif %}"
+   {% if app.request.attributes.get('_route') == 'inscription' %}aria-current="page"{% endif %}
+   href="{{ path('inscription') }}">
+   Inscription
+   </a>
 
 
-      <a class="nav_lien" href="#" aria-disabled="true">Connexion</a>
-
-      <a class="nav_lien" href="#contact">Contact</a>
     </nav>
-
   </div>
 </header>
 
